--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,6 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  padding: 10px 0;
   border-radius: 15px 15px 0 0;
 }
 
@@ -222,8 +221,8 @@ a:focus {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  justify-content: space-between;
   margin-left: 25px;
-  justify-content: flex-end;
   width: 100%;
   padding-right: 30px;
 }
@@ -244,7 +243,7 @@ a:focus {
   background-color: #f89cab;
   padding: 25px;
   border-radius: 0 0 15px 15px;
-  height: 450px;
+  height: 472px;
 }
 
 .slider_section .row {
@@ -315,6 +314,19 @@ a:focus {
   margin: 0 10px;
 }
 
+.wishme_logo {
+  width: 151px;
+}
+
+.login-btn {
+  display: inline-block;
+  padding: 10px 40px;
+  background-color: #db4566;
+  color: #ffffff;
+  border: 1px solid #db4566;
+  border-radius: 5px;
+}
+
 .slider_section .carousel_btn-box .carousel-control-prev,
 .slider_section .carousel_btn-box .carousel-control-next {
   position: unset;
@@ -336,6 +348,7 @@ a:focus {
   position: relative;
   padding: 10px;
   margin-top: 25px;
+  height: 313px;
 }
 
 .shop_section .box a {
@@ -430,6 +443,7 @@ a:focus {
   background-color: #7fd7eb;
   color: #ffffff;
   border-radius: 15px;
+  height: 466px;
 }
 
 .saving_section .row {
